# jenny

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: Release.yml
android/: build.gradle
android/app/: build.gradle
ci/: Cargo.toml  version.info.txt
ci/src/check_asset/: main.rs
ci/src/check_release/: main.rs
ci/src/community_notify/: main.rs
ci/src/upload_asset/: main.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/basic/: commons.dart  desktop.dart  methods.dart  web_dav_sync.dart
lib/configs/: android_display_mode.dart  android_version.dart  auto_clean.dart  configs.dart  download_and_export_to.dart  download_thread_count.dart  export_path.dart  login.dart  network_api_host.dart  network_cdn_host.dart  pager_column_number.dart  pager_controller_mode.dart  pager_cover_rate.dart  pager_view_mode.dart  reader_controller_type.dart  reader_direction.dart  reader_slider_position.dart  reader_type.dart  theme.dart  versions.dart  web_dav_url.dart
lib/screens/: about_screen.dart  app_screen.dart  browser_screen.dart  calculator_screen.dart  comic_download_screen.dart  comic_info_screen.dart  comic_reader_screen.dart  comic_search_screen.dart  comments_screen.dart  download_album_screen.dart  download_import_screen.dart  downloads_exporting_screen.dart  downloads_exporting_screen2.dart  downloads_exports_screen.dart  downloads_exports_screen2.dart  downloads_screen.dart  favorites_screen.dart  init_screen.dart  (+8 more)
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
windows/: CMakeLists.txt
(+30 files in other folders)
