[package]
name = "ci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check-release"
path = "src/check_release/main.rs"

[[bin]]
name = "check-asset"
path = "src/check_asset/main.rs"

[[bin]]
name = "upload-asset"
path = "src/upload_asset/main.rs"

[[bin]]
name = "community-notify"
path = "src/community_notify/main.rs"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_derive = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
serenity = { version = "0.11", features = ["builder", "cache", "client", "gateway", "http", "model",  "utils", "rustls_backend"], default-features = false }
